留学サポート変更

--- a/index.html
+++ b/index.html
@@ -180,16 +180,20 @@
         </section>
         <section class="abroad">
             <h2 id="abroad">留学サポート</h2>
+            <p>当教室では英語を学んだ先の「留学サポート」も信頼できる3人のエージェントと一緒にしていきます。留学の準備から現地の生活まで、一緒にサポートします!「興味あるけどどこに聞けばいいか分からない」「留学するとどんなメリットがあるの？」など、どんな些細なご質問でもお気軽にお問合せください。</p>
             <div>
-                <div>
-                    <p>○留学Office LAU(ニュージーランド)</p>
-                    <p>○ワイエー留学 (オーストラリア)</p>
-                    <p>○グローバル・クリエイティヴ・カナダ</p>
-                </div>
-                <div>
-                    <p>代表 勝彰子</p>
-                    <p>代表 渥味涼子</p>
-                    <p>代表 久野浩司</p>
+                <p>エージェント紹介</p>
+                <div class="abroad">
+                    <div>
+                        <p>○留学Office LAU(ニュージーランド)</p>
+                        <p>○ワイエー留学 (オーストラリア)</p>
+                        <p>○グローバル・クリエイティヴ・カナダ</p>
+                    </div>
+                    <div>
+                        <p>代表 勝彰子</p>
+                        <p>代表 渥味涼子</p>
+                        <p>代表 久野浩司</p>
+                    </div>
                 </div>
             </div>
         </section>
@@ -208,8 +212,7 @@
                     <p>ホームページをご覧頂きありがとうございます。</p>
                     <p>JIRITSU LABO 咲Kids教室 代表の崎原 薫と申します。</p>
                     <p>この教室は「咲kids」の名の通り、子供達がどんな世の中や状況になっても自ら花を咲かせるように逞しく育って欲しいという願いからつけました。</p>
-                    <p>グローバル化やAIの進化、終身雇用の崩壊などの変化の激しい現代ではこれまでよりも英語力が必須になってきました。それに伴い2020年には小学校指導要領に「外国語」が追加されました。また、多様性などにより「<strong>自分らしく生きる</strong>」ということを大切にする人もかなり多くなってきています。その為、当教室では「これからの時代を生き抜くための<strong>人間力</strong>の育成」を理念とし、英語と書道を通して英語力と自分らしく生きる<strong>人間力</strong>の両方を育てます。</p>
-                    <p>中学生クラスでは<strong>集団塾</strong>と<strong>個別指導塾</strong>の中間に当たる独自のスタイルで授業を行なっています。そのため、生徒の1人1人のペースに合わせながらも切磋琢磨できる環境を実現しています。そして生徒自身が説明する機会を作り、説明する力も育成しています。</p>
+                    <p>グローバル化やAIの進化、終身雇用の崩壊などの変化の激しい現代ではこれまでよりも英語力が必須になってきました。それに伴い2020年には小学校指導要領に「外国語」が追加されました。また、多様性などにより「<strong>自分らしく生きる</strong>」ということを大切にする人もかなり多くなってきています。その為、当教室では「これからの時代を生き抜くための<strong>人間力</strong>の育成」を理念とし、英語と書道を通して英語力と自分らしく生きる<strong>人間力</strong>の両方を育てます。また、生徒自身が自分の意見を言ったり、説明する機会を作ることで通常の学習塾などでは育てることのできない「説明力」や「表現力」の育成も行なっています。</p>
                     <p>最後に、咲Kids教室はこれからも人間力の育成に力を入れて指導していきますので、少しでも興味を持たれましたら当ページに用意しているGoogleフォームから<strong>無料体験授業</strong>にお気軽にお申し込みください。皆様に会えることを楽しみにお待ちしております。</p>
                 </div>
             </div>
