--- a/chugaku/chugaku.html
+++ b/chugaku/chugaku.html
@@ -108,9 +108,10 @@
         </div>
         <section class="lesson">
             <h2 id="lesson">Lesson内容</h2>
+            <p><strong>集団塾</strong>と<strong>個別指導塾</strong>の中間の独自のスタイルで<br class="none">生徒の1人1人のペースに合わせながらも切磋琢磨できる環境を実現!</p>
             <div>
                 <h3>英語クラス</h3>
-                <p>90%の生徒は学校英語の学習をしています。生徒2〜3人につき講師1人の割合で教室を見回り、声かけしながら質問や手が止まってる生徒に<strong>丁寧</strong>に対応しています。リスニング、英作文、長文も1年生から<strong>高校受験</strong>に向けて力をつけていってます。毎週<strong>単語テスト</strong>を必須とし満点以下は再テストすることで確実に定着するようにしています。残り10%の生徒は英会話レッスンを受講。イギリス教材「Oxford」の教材を使いハイクラスの英会話を学習しながら、学校の英単語テストと問題集もこなしてます。定期テスト前は学校の提出物が出来ているかの確認と分からない問題の解説もしていきます。</p>
+                <p>90%の生徒は学校英語の学習をしています。1年生からリスニング、英作文、長文に取り組んでもらうことで<strong>高校受験</strong>に向けて力をつけていってます。さらに毎週<strong>単語テスト</strong>を必須とし満点未満は再テストすることで確実に定着するようにしています。残り10%の生徒は英会話レッスンを受講。イギリス教材「Oxford」の教材を使いハイクラスの英会話を学習しながら、学校の英単語テストと問題集もこなしてます。定期テスト前は学校の提出物が出来ているかの確認と分からない問題の解説もしていきます。</p>
             </div>
             <div>
                 <h3>数学クラス</h3>
