写真追加と書道クラスのレッスン内容変更

--- a/shodo/shodo.html
+++ b/shodo/shodo.html
@@ -108,11 +108,11 @@
             <h2 id="lesson">Lesson内容</h2>
             <div>
                 <h3>○教育部(小学〜中学)</h3>
-                <p>1年回の検定試験と年1回の書道展に参加しています。年末にはカレンダー作り、夏は2年に1度うちわ作り、夏・冬休みの宿題、その他毛筆で色んな作品に挑戦してもらってます。硬筆では教養の1つである「四字熟語」「慣用句」で綺麗な字を書く練習と同時に知識も養っていきます。お稽古後は「漢字テスト」を行い、出来たら表にシールを貼りシールが増えるのを楽しんでもらってます。ポイントまできたら「お菓子か文房具」がご褒美です。</p>
+                <p>1年回の検定試験と年1回の書道展に参加しています。夏・冬休みの学校の宿題、年末にはカレンダー作り、夏は2年に1度うちわ作りなど、毛筆で楽しみながら色んな作品し感性と集中力、観察力を養ってます。硬筆では教養の1つである「四字熟語」「慣用句」で綺麗な字を書く練習と同時に知識も養っていきます。お稽古後は「漢字テスト」を行い、出来たら表にシールを貼りシールが増えるのを楽しんでもらってます。ポイントまできたら「お菓子か文房具」がご褒美があります。</p>
             </div>
             <div>
                 <h3>○一般部(高校生以上)</h3>
-                <p>1年4回の検定試験と年1回の書道展に参加しています。教育部を指導出来るくらいのレベルまでを目標としてもらい腕をあげていきます。楷書、行書、草書、隷書、篆書、般若心経など様々な書体を書けるようにそして自分の作品作りを楽しまめるよう指導しています。</p>
+                <p>1年4回の検定試験と年1回の書道展に参加しています。教育部（小・中学生）を指導出来るくらいのレベルまでを目標としてもらい腕をあげていきます。楷書、行書、草書、隷書、篆書、般若心経など様々な書体を書けるようにそして自分の作品作りを楽しまめるよう指導しています。最終的に書道教室が持てるようサポートしていきます。</p>
             </div>
         </section>
         <section class="scenery">
