--- a/chugaku/chugaku.html
+++ b/chugaku/chugaku.html
@@ -125,11 +125,12 @@
         <section class="scenery">
             <h2 id="reputation">授業風景</h2>
             <img src="../photo/chugaku1.jpeg" alt="lesson">
-            <img src="../photo/chugaku2.jpg" alt="lesson">
-            <img src="../photo/chugaku3.jpg" alt="lesson">
+            <img src="../photo/chugaku2.jpeg" alt="lesson">
+            <img src="../photo/chugaku3.jpeg" alt="lesson">
             <img src="../photo/chugaku4.jpg" alt="lesson">
             <img src="../photo/chugaku5.jpeg" alt="lesson">
             <img src="../photo/chugaku6.jpeg" alt="lesson">
+            <img src="../photo/chugaku7.jpg" alt="lesson">
         </section>
         <section class="achievement">
             <h2 id="achievement">資格</h2>
