被りなどの修正

--- a/chugaku/chugaku.html
+++ b/chugaku/chugaku.html
@@ -111,11 +111,11 @@
             <p><strong>集団塾</strong>と<strong>個別指導塾</strong>の中間の独自のスタイルで<br class="none">生徒の1人1人のペースに合わせながらも切磋琢磨できる環境を実現!</p>
             <div>
                 <h3>英語クラス</h3>
-                <p>90%の生徒は学校英語の学習をしています。1年生からリスニング、英作文、長文に取り組んでもらうことで<strong>高校受験</strong>に向けて力をつけていってます。さらに毎週<strong>単語テスト</strong>を必須とし満点未満は再テストすることで確実に定着するようにしています。残り10%の生徒は英会話レッスンを受講。イギリス教材「Oxford」の教材を使いハイクラスの英会話を学習しながら、学校の英単語テストと問題集もこなしてます。定期テスト前は学校の提出物が出来ているかの確認と分からない問題の解説もしていきます。</p>
+                <p>学校英語とリスニング、英作文、長文に取り組み<strong>高校受験</strong>に向けて英語力をつけていってます。さらに毎週単語テストを必須とし満点未満は再テストすることで確実に定着するようにしています。<br>数名の生徒は<strong>英会話</strong>レッスンを受講。イギリス教材「Oxford」の教材を使いハイクラスの英会話を学習しながら、学校の英単語テストと問題集もこなしてます。定期テスト前は学校の提出物の進行具合をチェックし、その中で解けない問題を1人1人解説していきます。</p>
             </div>
             <div>
                 <h3>数学クラス</h3>
-                <p>個々のペースに合わせながら<strong>定期テスト対策</strong>と<strong>受験対策</strong>を行い、不得意な単元はレッスンの始めの<strong>10分〜15分復習プリント</strong>を毎回し不得意な部分の克服をしていきます。何度も解くことで、解き方の定着に繋げます。また皆の前で<strong>生徒自身が解説</strong>することで、より理解を深めることと伝える力も養います。このことで<strong>数学の楽しさ</strong>を見出す生徒も出てきてます。定期テスト前は学校の提出物が出来ているかの確認と分からない問題の解説もしていきます。</p>
+                <p>個々のペースに合わせながら<strong>定期テスト対策</strong>と<strong>受験対策</strong>を行い、不得意な単元はレッスンの始めの<strong>10分〜15分復習プリント</strong>を毎回し不得意な部分の克服をしていきます。何度も解くことで、解き方の定着に繋げます。<br>また皆の前で<strong>生徒自身が解説</strong>することで、より理解を深めることと伝える力も養います。このことで<strong>数学の楽しさ</strong>を見出す生徒も出てきてます。定期テスト前は学校の提出物が出来ているかの確認と分からない問題の解説もしていきます。</p>
             </div>
             <div>
                 <h3>国語クラス</h3>
@@ -136,8 +136,7 @@
             <h2 id="achievement">資格</h2>
             <div>
                 <h3>実用英語技能検定</h3>
-                <p>小学生から英検対策を行なっており、３級から追加される２次試験の面接対策まで対応しています。</p>
-                <p>教室が準会場指定になっていますので当教室で受験可能です。</p>
+                <p>小学生から英検対策を行なっており、３級から追加される２次試験の面接対策まで対応しています。教室が準会場指定になっていますので当教室で受験可能です。</p>
             </div>
         </section>
         <section>
