--- a/shodo/shodo.html
+++ b/shodo/shodo.html
@@ -62,7 +62,7 @@
         </nav>
         <!-- バーガーメニュー -->
         <nav class="burger">
-            <ul class="dropdown">
+            <ul>
                 <li>
                     <a class="form" href="https://docs.google.com/forms/d/e/1FAIpQLScD0C_W_-_teGDYXqfrZKSlomXD1L1C2xfjJ313BFCf_4sfQA/viewform?usp=sf_link">無料体験・入塾申し込み</a>
                 </li>
@@ -108,7 +108,7 @@
             <h2 id="lesson">Lesson内容</h2>
             <div>
                 <h3>○教育部(小学〜中学)</h3>
-                <p>1年回の検定試験と年1回の書道展に参加しています。夏・冬休みの学校の宿題、年末にはカレンダー作り、夏は2年に1度うちわ作りなど、毛筆で楽しみながら色んな作品し感性と集中力、観察力を養ってます。硬筆では教養の1つである「四字熟語」「慣用句」で綺麗な字を書く練習と同時に知識も養っていきます。お稽古後は「漢字テスト」を行い、出来たら表にシールを貼りシールが増えるのを楽しんでもらってます。ポイントまできたら「お菓子か文房具」がご褒美があります。</p>
+                <p>○1年回の検定試験と年1回の書道展に参加しています。夏・冬休みの学校の宿題、年末にはカレンダー作り、夏は2年に1度うちわ作りなど、毛筆で楽しみながら色んな作品し感性と集中力、観察力を養ってます。<br>○硬筆では教養の1つである「四字熟語」「慣用句」で綺麗な字を書く練習と同時に知識も養っていきます。お稽古後は「漢字テスト」を行い、合格したら表にシールを貼りポイントまで到達すると「お菓子か文房具」のご褒美があるので、子ども達が楽しみながら積極的に取り組んでくれています。<br>○木曜クラスは英語で書道の指導を行なっています。その為、書道だけでなく自然な英語表現も身につけることができます。</p>
             </div>
             <div>
                 <h3>○一般部(高校生以上)</h3>
@@ -125,6 +125,10 @@
             <img src="../photo/shodo5.jpg" alt="lesson">
             <img src="../photo/shodo6.jpg" alt="lesson">
             <img src="../photo/shodo7.jpg" alt="lesson">
+            <img src="../photo/shodo8.jpg" alt="lesson">
+            <img src="../photo/shodo9.jpg" alt="lesson">
+            <img src="../photo/shodo10.jpg" alt="lesson">
+            <img src="../photo/shodo11.jpg" alt="lesson">
         </section>
         <section class="achievement">
             <h2 id="achievement">資格</h2>
