--- a/shogaku/shogaku.html
+++ b/shogaku/shogaku.html
@@ -47,7 +47,7 @@
                     </ul>
                 </li>
                 <li class="headmenu">
-                    <a href="#reputation">授業風景</a>
+                    <a href="#reputation">授業・イベント風景</a>
                 </li>
                 <li class="headmenu">
                     <a href="#achievement">資格</a>
@@ -83,7 +83,7 @@
                         <a href="../shodo/shodo.html">書道クラス</a>
                     </li>
                     <li class="head-menu">
-                        <a href="#reputation">授業風景</a>
+                        <a href="#reputation">授業・イベント風景</a>
                     </li>
                     <li class="head-menu">
                         <a href="#achievement">資格</a>
@@ -114,8 +114,7 @@
                     自分で目標を立て、アルファベットや単語を覚えていきます。
                     ４年生以上は「<strong>外国人講師とオンラインレッスン</strong>」を月1回30分してます。
                     トピックを決め、それについて意見を出し理由まで英語で言えるように指導していきます。
-                    またレベルに合わせて「<strong>英作文</strong>」「<strong>読解</strong>」などの問題集にも挑戦してもらったり、<strong>英検</strong>にも励んでもらってます。
-                    リスニングはCDからだけでなく、<strong>海外の漫画</strong>を見てネイティブの会話のスピードや表現にも触れてもらいます。
+                    またレベルに合わせて「<strong>英作文</strong>」「<strong>読解</strong>」などの問題集にも挑戦してもらったり、<strong>英検</strong>にも励んでもらってます。<br>リスニングはCDからだけでなく、<strong>海外の漫画</strong>を見てネイティブの会話のスピードや表現にも触れてもらいます。
                 </p>
             </div>
         </section>
@@ -146,8 +145,7 @@
             <h2 id="achievement">資格</h2>
             <div>
                 <h3>実用英語技能検定</h3>
-                <p>小学生から英検対策を行なっており、３級から追加される２次試験の面接対策まで対応しています。</p>
-                <p>教室が準会場指定になっていますので当教室で受験可能です。</p>
+                <p>小学生から英検対策を行なっており、３級から追加される２次試験の面接対策まで対応しています。教室が準会場指定になっていますので当教室で受験可能です。</p>
             </div>
         </section>
         <section>
@@ -197,7 +195,7 @@
             </ul>
             <ul>
                 <li class="footmenu">
-                    <a href="#reputation">授業風景</a>
+                    <a href="#reputation">授業・イベント風景</a>
                 </li>
                 <li class="footmenu">
                     <a href="#achievement">資格</a>
