--- a/chugaku/chugaku.html
+++ b/chugaku/chugaku.html
@@ -74,6 +74,9 @@
                         <a href="../index.html">ホーム</a>
                     </li>
                     <li class="head-menu">
+                        <a href="../index.html#abroad">留学</a>
+                    </li>
+                    <li class="head-menu">
                         <a href="#lesson">Lesson内容</a>
                     </li>
                     <li class="head-menu">
@@ -171,6 +174,9 @@
             <ul>
                 <li class="footmenu">
                     <a href="../index.html">ホーム</a>
+                </li>
+                <li class="footmenu">
+                    <a href="../index.html#abroad">留学</a>
                 </li>
                 <li class="footmenu">
                     <a href="#lesson">Lesson内容</a>
