--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
         <!-- キャッチコピー -->
         <div class="slogandiv">
             <div class="slide">
-                <img src="photo/shogaku1.JPG" alt="小学生">
+                <img src="photo/shogaku1.jpg" alt="小学生">
                 <img src="photo/chugaku4.jpg" alt="中学生">
-                <img src="photo/shodo1.JPG" alt="書道">
+                <img src="photo/shodo1.jpg" alt="書道">
             </div>
             <h2 class="slogan">英語・英会話&#x2613;書道を通して<br><span>人間力</span>を育てる</h2>
         </div>
@@ -129,7 +129,7 @@
                 <a href="shogaku/shogaku.html">
                     <div>
                         <div class="classdiv">
-                            <img src="photo/shogaku1.JPG" alt="小学生">
+                            <img src="photo/shogaku1.jpg" alt="小学生">
                         </div>
                         <div class="classdiv2">
                             <h3>小学生クラス</h3>
@@ -153,7 +153,7 @@
                 <a href="shodo/shodo.html">
                     <div>
                         <div class="classdiv">
-                            <img src="photo/shodo1.JPG" alt="書道">
+                            <img src="photo/shodo1.jpg" alt="書道">
                         </div>
                         <div class="classdiv2">
                             <h3>書道クラス</h3>
