--- a/shodo/shodo.html
+++ b/shodo/shodo.html
@@ -74,6 +74,9 @@
                         <a href="../index.html">ホーム</a>
                     </li>
                     <li class="head-menu">
+                        <a href="../index.html#abroad">留学</a>
+                    </li>
+                    <li class="head-menu">
                         <a href="#lesson">Lesson内容</a>
                     </li>
                     <li class="head-menu">
@@ -135,76 +138,79 @@
                 <p>教育部(小学生～ 中学生) 
                     一般部(高校生～社会人)
                     社会人は3段で教育部の指導者の免状が授与されます。</p>
-            </div>
-        </section>
-        <section>
-            <h2 id="contact">お問い合わせ</h2>
-            <div class="inline">
-                <div class="contact">
-                    <dl class="phonenumber">
-                        <dd><img src="../photo/phone.svg" alt="電話番号"></dd>
-                        <dt>090 - 3866 - 8049</dt>
-                    </dl>
-                    <div class="formdiv"><a class="form_main" href="https://docs.google.com/forms/d/e/1FAIpQLScD0C_W_-_teGDYXqfrZKSlomXD1L1C2xfjJ313BFCf_4sfQA/viewform?usp=sf_link">無料体験・入塾申し込み</a></div>
-                    <div class="LINE">
-                        <p>LINEでのお問い合わせも受け付けております。</p>
-                        <p>下記のQRコードからお気軽にご連絡ください。</p>
-                        <p class="tap">(読み取れない場合はタップしてください）</p>
-                        <a href="https://line.me/ti/p/wg7LPOKn9I">
-                            <img src="../photo/LINE.jpg" alt="LINE">
-                        </a>
-                    </div>
-                    <dl class="adress">
-                        <dt>本校：大阪府堺市西区浜寺石津町東3-4-19</dt>
-                    </dl>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d821.4745461036027!2d135.4568391!3d34.5561332!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6000db57cb64525f%3A0x76fdcc7bd9f8d6c4!2z44CSNTkyLTgzMzUg5aSn6Ziq5bqc5aC65biC6KW_5Yy65rWc5a-655-z5rSl55S65p2x77yT5LiB77yU4oiS77yR77yZ!5e0!3m2!1sja!2sjp!4v1661171573964!5m2!1sja!2sjp" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+            </section>
+            <section>
+                <h2 id="contact">お問い合わせ</h2>
+                <div class="inline">
                     <div class="contact">
-                        <dl class="adress">
-                            <dt>湊教室:大阪府堺市堺区出島町2-6-1 湊団地自治会館</dt>
+                        <dl class="phonenumber">
+                            <dd><img src="../photo/phone.svg" alt="電話番号"></dd>
+                            <dt>090 - 3866 - 8049</dt>
                         </dl>
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3262.6294382679985!2d135.45776509041963!3d34.57069790939999!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6000dcba5bfa8d8d%3A0x5bd4af2d70248968!2z44CSNTkwLTA4MzQg5aSn6Ziq5bqc5aC65biC5aC65Yy65Ye65bO255S677yS5LiB77yW4oiS77yRIO-8kQ!5e0!3m2!1sja!2sjp!4v1661319823078!5m2!1sja!2sjp" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        <div class="formdiv"><a class="form_main" href="https://docs.google.com/forms/d/e/1FAIpQLScD0C_W_-_teGDYXqfrZKSlomXD1L1C2xfjJ313BFCf_4sfQA/viewform?usp=sf_link">無料体験・入塾申し込み</a></div>
+                        <div class="LINE">
+                            <p>LINEでのお問い合わせも受け付けております。</p>
+                            <p>下記のQRコードからお気軽にご連絡ください。</p>
+                            <p class="tap">(読み取れない場合はタップしてください）</p>
+                            <a href="https://line.me/ti/p/wg7LPOKn9I">
+                                <img src="../photo/LINE.jpg" alt="LINE">
+                            </a>
+                        </div>
+                        <dl class="adress">
+                            <dt>本校:大阪府堺市西区浜寺石津町東3-4-19</dt>
+                        </dl>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d821.4745461036027!2d135.4568391!3d34.5561332!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6000db57cb64525f%3A0x76fdcc7bd9f8d6c4!2z44CSNTkyLTgzMzUg5aSn6Ziq5bqc5aC65biC6KW_5Yy65rWc5a-655-z5rSl55S65p2x77yT5LiB77yU4oiS77yR77yZ!5e0!3m2!1sja!2sjp!4v1661171573964!5m2!1sja!2sjp" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        <div class="contact">
+                            <dl class="adress">
+                                <dt>湊教室:大阪府堺市堺区出島町2-6-1 湊団地自治会館</dt>
+                            </dl>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3262.6294382679985!2d135.45776509041963!3d34.57069790939999!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6000dcba5bfa8d8d%3A0x5bd4af2d70248968!2z44CSNTkwLTA4MzQg5aSn6Ziq5bqc5aC65biC5aC65Yy65Ye65bO255S677yS5LiB77yW4oiS77yRIO-8kQ!5e0!3m2!1sja!2sjp!4v1661319823078!5m2!1sja!2sjp" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </section>
-    </main>
-    <!-- フッター -->
-    <footer>
-        <p id="page-top"><a href="#">PAGE TOP</a></p>
-        <nav>
-            <ul>
-                <li class="footmenu">
-                    <a href="../index.html">ホーム</a>
-                </li>
-                <li class="footmenu">
-                    <a href="#lesson">Lesson内容</a>
-                </li>
-            </ul>
-            <ul class="classnav">
-                <li class="footmenu">
-                    <a href="../shogaku/shogaku.html">小学生クラス/</a>
-                </li>
-                <li class="footmenu">
-                    <a href="../chugaku/chugaku.html">中学生クラス</a>
-                </li>
-            </ul>
-            <ul>
-                <li class="footmenu">
-                    <a href="#reputation">授業風景</a>
-                </li>
-                <li class="footmenu">
-                    <a href="#achievement">資格</a>
-                </li>
-                <li class="footmenu">
-                    <a href="../index.html#greeting">代表挨拶</a>
-                </li>
-                <li class="footmenu">
-                    <a href="#contact">お問い合わせ</a>
-                </li>
-            </ul>
-        </nav>
-        <small>&copy;2022 咲Kids教室</small>
-    </footer>
-    <script src="../main.js"></script>
-</body>
-</html>
+            </section>
+        </main>
+        <!-- フッター -->
+        <footer>
+            <p id="page-top"><a href="#">PAGE TOP</a></p>
+            <nav>
+                <ul>
+                    <li class="footmenu">
+                        <a href="../index.html">ホーム</a>
+                    </li>
+                    <li class="footmenu">
+                        <a href="../index.html#abroad">留学</a>
+                    </li>
+                    <li class="footmenu">
+                        <a href="#lesson">Lesson内容</a>
+                    </li>
+                </ul>
+                <ul class="classnav">
+                    <li class="footmenu">
+                        <a href="../shogaku/shogaku.html">小学生クラス/</a>
+                    </li>
+                    <li class="footmenu">
+                        <a href="../chugaku/chugaku.html">中学生クラス</a>
+                    </li>
+                </ul>
+                <ul>
+                    <li class="footmenu">
+                        <a href="#reputation">授業風景</a>
+                    </li>
+                    <li class="footmenu">
+                        <a href="#achievement">資格</a>
+                    </li>
+                    <li class="footmenu">
+                        <a href="../index.html#greeting">代表挨拶</a>
+                    </li>
+                    <li class="footmenu">
+                        <a href="#contact">お問い合わせ</a>
+                    </li>
+                </ul>
+            </nav>
+            <small>&copy;2022 咲Kids教室</small>
+        </footer>
+        <script src="../main.js"></script>
+    </body>
+    </html>
