--- a/shogaku/shogaku.html
+++ b/shogaku/shogaku.html
@@ -74,6 +74,9 @@
                         <a href="../index.html">ホーム</a>
                     </li>
                     <li class="head-menu">
+                        <a href="../index.html#abroad">留学</a>
+                    </li>
+                    <li class="head-menu">
                         <a href="#lesson">Lesson内容</a>
                     </li>
                     <li class="head-menu">
@@ -100,7 +103,7 @@
     </header>
     <main>
         <div class="slogandiv">
-            <img src="../photo/shogaku1.JPG" alt="小学生">
+            <img src="../photo/shogaku1.jpg" alt="小学生">
             <h2 class="slogan">英語を通して<span>人間力</span>を育てる</h2>
         </div>
         <section class="lesson">
@@ -180,6 +183,9 @@
             <ul>
                 <li class="footmenu">
                     <a href="../index.html">ホーム</a>
+                </li>
+                <li class="footmenu">
+                    <a href="../index.html#abroad">留学</a>
                 </li>
                 <li class="footmenu">
                     <a href="#lesson">Lesson内容</a>
