サーバーUPの設定とスタイルの微調整

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         </section>
         <section class="abroad">
             <h2 id="abroad">留学サポート</h2>
-            <p>当教室では英語を学んだ先の「留学サポート」も信頼できる3人のエージェントと一緒にしていきます。留学の準備から現地の生活まで、一緒にサポートします!「興味あるけどどこに聞けばいいか分からない」「留学するとどんなメリットがあるの？」など、どんな些細なご質問でもお気軽にお問合せください。</p>
+            <p>当教室では英語を学んだ先の「留学サポート」も信頼できる3人のエージェントと一緒にしていきます。留学の準備から現地の生活まで、一緒にサポートします!「高校留学とどう違うの？」「留学するとどんなメリットがあるの？」など、どんな些細なご質問でもお気軽にお問合せください。</p>
             <div>
                 <p>エージェント紹介</p>
                 <div class="abroad">
