メタタグ追加

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <link rel="canonical" href="https://www.jiritsulabo.com">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="photo/logo.png">
-    <title> 堺市の英会話教室・書道教室・学習塾なら咲Kids教室|JIRITSULABO 咲Kids教室</title>
+    <title> 堺市の英会話教室・書道教室・学習塾なら咲Kids教室|JIRITSU LABO 咲Kids教室</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 </head>
 <body>
     <!-- ヘッダー -->
     <header>
         <h1>
-            <img src="photo/mainlogo.png" alt="JIRITU LABO 咲Kids教室">
+            <img src="photo/mainlogo.png" alt="JIRITSU LABO 咲Kids教室">
         </h1>
         <nav class="headnav">
             <ul class="dropdown">
