--- a/shodo/shodo.html
+++ b/shodo/shodo.html
@@ -8,13 +8,14 @@
     <link rel="icon" href="../photo/logo.png">
     <meta name="description" content="JIRITSU LABO 咲Kids教室は小学生から大人までの習字を習いたい・綺麗な字を書けるようになりたい方におすすめの堺市西区にある書道教室です。南海本線「湊」駅 徒歩5分の書道教室。堺市堺区出島町2-6-1 湊団地自治会館。堺市西区浜寺石津町東3-4-19">
     <meta name="keywords" content="湊,堺,堺市,堺市堺区,堺市西区,出島町,大浜,大阪,習字,書道,書道教室,毛筆,硬筆,小学生,中学生,高校生,大人,社会人,おすすめ">
+    <link rel="canonical" href="https://www.jiritsulabo.com">
     <title>書道クラス|堺市の書道教室ならJIRITSU LABO 咲Kids教室</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
         <h1>
-            <img src="../photo/shodologo.png" alt="JIRITU LABO 咲Kids教室">
+            <img src="../photo/shodologo.png" alt="JIRITSU LABO 咲Kids教室">
         </h1>
         <nav class="headnav">
             <ul class="dropdown">
