--- a/chugaku/chugaku.html
+++ b/chugaku/chugaku.html
@@ -8,13 +8,14 @@
     <link rel="icon" href="../photo/logo.png">
     <meta name="description" content="JIRITSU LABO 咲Kids教室は定期テストや高校受験に向けて学力を向上させたい中学生の方におすすめの集団・個別の学習塾です。阪堺線「石津」駅 徒歩5分の学習塾。堺市西区浜寺石津町東3-4-19。堺市堺区出島町2-6-1 湊団地自治会館">
     <meta name="keywords" content="石津,堺,石津川,湊,浜寺,大浜,大阪,集団塾・個別指導塾・学習塾・進学塾・志望校対策・高校受験対策,中学生">
+    <link rel="canonical" href="https://www.jiritsulabo.com">
     <title>堺市の学習塾なら咲Kids教室|JIRITSU LABO 咲Kids教室</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
         <h1>
-            <img src="../photo/chugakulogo.png" alt="JIRITU LABO 咲Kids教室">
+            <img src="../photo/chugakulogo.png" alt="JIRITSU LABO 咲Kids教室">
         </h1>
         <nav class="headnav">
             <ul class="dropdown">
