--- a/index.html
+++ b/index.html
@@ -186,20 +186,24 @@
                 <div class="abroad">
                     <div>
                         <p>○留学Office LAU(ニュージーランド)</p>
-                        <p>○ワイエー留学 (オーストラリア)</p>
-                        <p>○グローバル・クリエイティヴ・カナダ</p>
-                    </div>
-                    <div>
                         <p>代表 勝彰子</p>
+                        <a href="https://ryugaku-lau.com/">https://ryugaku-lau.com/</a>
+                        <p>○ワイエー留学 (オーストラリア)</p>
                         <p>代表 渥味涼子</p>
+                        <a href="https://ryugakuouen.com/">https://ryugakuouen.com/</a>
+                        <p>○グローバル・クリエイティヴ・カナダ</p>
                         <p>代表 久野浩司</p>
+                        <a href="https://www.gccanada.net/">https://www.gccanada.net/</a>
                     </div>
                 </div>
                 <div class="abroad-iphone">
                     <div>
                         <p>○留学Office LAU(ニュージーランド)<br>代表 勝彰子</p>
+                        <a href="https://ryugaku-lau.com/">https://ryugaku-lau.com/</a>
                         <p>○ワイエー留学 (オーストラリア)<br>代表 渥味涼子</p>
+                        <a href="https://ryugakuouen.com/">https://ryugakuouen.com/</a>
                         <p>○グローバル・クリエイティヴ・カナダ<br>代表 久野浩司</p>
+                        <a href="https://www.gccanada.net/">https://www.gccanada.net/</a>
                     </div>
                 </div>
             </div>
